# Clinic-System

./: .gitignore  CMakeLists.txt  ClinicSystem.sln  Medcin.cpp  Order.cpp  Order.h  OrderItem.cpp  OrderItem.h  README.md  Stock.cpp  Stock.h  build.sh  bulid.sh  compile_commands.json  inputDoctors.txt  inputMedcin.txt  inputPatient.txt  main.cpp  source.cpp
.build/: CMakeCache.txt  Clinc.cbp  Clinc.layout  Makefile  cmake_install.cmake  compile_commands.json  main
ClinicBlocks/: Cash.h  Check.cpp  ClinicBlocks.cbp  ClinicBlocks.depend  ClinicBlocks.layout  List_Of_Orders.cpp  List_Of_Orders.h  Medcin.cpp  Medical_Insurance.cpp  Medical_Insurance.h  Medical_Specialization.cpp  Medical_Specialization.h  Order.cpp  Order.h  OrderItem.cpp  OrderItem.h  Payment.cpp  Stock.cpp  Stock.h  admin.cpp  admin.h  appointment.cpp  appointment.h  build.sh  doctor.cpp  doctor.h  file.cpp  inputAppoint.txt  inputDoctors.txt  inputPatient.txt  main.cpp  other.cpp  other.h  out.puml  patient.cpp  patient.h  prescription.cpp  prescription.h
ClinicBlocks/data/: inputAppoint.txt  inputDoctors.txt  inputMedcin.txt  inputPatient.txt  inputPresc.txt  inputSpec.txt
ClinicBlocks/include/: Check.h  Order.h  Payment.h  Transaction.h  admin.h  appointment.h  patient.h  person.h
ClinicBlocks/src/: Order.cpp  OrderItem.cpp  admin.cpp  appointment.cpp  patient.cpp  person.cpp
ClinicSystem_V2/: ClinicSystem_V2.cpp  ClinicSystem_V2.sln  Medcin.cpp  Order.cpp  Order.h  OrderItem.cpp  OrderItem.h  Stock.cpp  Stock.h
ClinicSystem_V2/ClinicSystem_V2/: ClinicSystem_V2.vcxproj  ClinicSystem_V2.vcxproj.filters  Medcin.cpp  Medcin.h  Order.cpp  OrderItem.cpp  Stock.cpp  Stock.h
ClinicSystem_V2/include/: Order.h  OrderItem.h
ClinicSystem_V2/src/: Order.cpp  (+1 more)
Clinic_System/: Clinic_System.sln
data/: inputMedcin.txt  inputSpec.txt
include/: Cash.h  Check.h  Credit.h  List_Of_Orders.h  Medcin.h  Medical_Insurance.h  Medical_Specialization.h  Order.h  OrderItem.h  Payment.h  Stock.h  Transaction.h  admin.h  appointment.h  doctor.h  other.h  patient.h  person.h  prescription.h
src/: Cash.cpp  Check.cpp  Credit.cpp  List_Of_Orders.cpp  Medcin.cpp  Medical_Insurance.cpp  Medical_Specialization.cpp  Order.cpp  OrderItem.cpp  Payment.cpp  Stock.cpp  Transaction.cpp  admin.cpp  appointment.cpp  doctor.cpp  main.cpp  other.cpp  patient.cpp  person.cpp  prescription.cpp
(+8 files in other folders)
